--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,12 @@ jobs:
         with:
           toit-version: ${{ matrix.toit-version }}
 
+      - name: Call ar
+        run: |
+          # On macOS, the test would take 30+ seconds if we don't call ar first.
+          # Not entirely clear why...
+          ar --version
+
       - name: Test
         run: |
           make test
