--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           # On macOS, the test would take 30+ seconds if we don't call ar first.
           # Not entirely clear why...
-          ar --version
+          ar --help
 
       - name: Test
         run: |
